<resources>
    <string name="app_name">LocalOcr</string>
    <string name="nav_header_title" translatable="false">Savet</string>
    <string name="nav_header_subtitle" translatable="false">savet_save@163.com</string>
    <string name="nav_header_desc">Savet Image</string>
    <string name="action_settings">Settings</string>

    <string name="menu_settings">Setting</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_info">About</string>
    <string name="content_description_function">function</string>
    <string name="detect_text_hint">Please select the image you want to by\n\'+\' or \'Camera\'</string>

    <string name="detect_btn_hint">detect image</string>
    <string name="pick_image_btn_hint">pick image</string>
    <string name="copy_content_btn_hint">copy select content</string>

    <string name="ready_text_hint">Welcome to LocalOcr</string>

    <!--  SettingFragment  -->
    <string name="box_score_thresh_f">BoxScoreThresh:%.2f</string>
    <string name="box_thresh_f">BoxThresh:%.2f</string>
    <string name="box_un_clip_ratio_f">BoxUnClipRatio:%.1f</string>
    <string name="len_ratio_f">MaxLenRatio:%d%%</string>
    <string name="padding_f">Padding:%d</string>
    <string name="do_angle">DoAngle</string>
    <string name="most_angle">MostAngle</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="advanced_settings_hint">Advanced Settings</string>
    <string name="auto_load_last_image_text">auto load last image(10min)</string>
    <string name="fast_detect_text">fast detect</string>
    <string name="reset">reset advanced settings</string>
    <string name="open_advanced_setting_text">open advanced setting text</string>

    <!-- InfoFragment  -->
    <string name="contributors">Contributors</string>
    <string name="contributors_summary">savet</string>
    <string name="version_name">Version name</string>
    <string name="default_version" translatable="false">1.0.0</string>
    <string name="send_email">Send email</string>
    <string name="email" translatable="false">savet_save@163.com</string>
    <string name="project_github">Github</string>
    <string name="project_github_addr" translatable="false">https://github.com/savet-save/LocalOcr</string>
    <string name="new_version_available">new version available!</string>
    <string name="find_new_version">Discover new releases: %s\n\nUpdates:\n%s</string>
    <string name="update_now">Update now</string>
    <string name="cancel">Cancel</string>
    <string name="update_fail">Update fail!</string>

</resources>